# llmd-copilot-demo

./: .env  .gitignore  README.md  Taskfile.yml  clock.py  port_forward.py  pyproject.toml  spam.py
clock/: app.py  clock2.py
proxy/: app.py  metrics.py  utils.py
proxy/clock/: app.py  apple_clock.py
tests/: test_utils.py
